--- a/rouletteapp.cabal
+++ b/rouletteapp.cabal
@@ -61,13 +61,13 @@ executable rouletteapp
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules: Games.RouletteGOL
+    -- other-modules: Games.RouletteGOL, App.BrilloMain
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base >= 4.7 && < 4.19
+    build-depends:    base >= 4.7 && < 4.19, brillo
 
     -- Directories containing source files.
     hs-source-dirs:   app src
